# rs-practice-webgl-viewer

./: .gitignore  package.json  pnpm-lock.yaml
config/: webpack.common.js
public/: index.html
src/: App.vue  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  main.js  package.json  pnpm-lock.yaml
web-simple/: main.js
web/src/: App.vue
